kubernetes/backend-pos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-pos
  namespace: "${NAMESPACE}"
  labels:
    app: backend-pos
spec:
  type: ClusterIP
  selector:
    app: backend-pos
  ports:
  - name: http
    port: 8001
    targetPort: 8001
    protocol: TCP
