kubernetes/backend-staff-timetable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-staff-timetable
  namespace: "${NAMESPACE}"
  labels:
    app: backend-staff-timetable
spec:
  type: ClusterIP
  ports:
  - port: 8002
    targetPort: 8002
    protocol: TCP
    name: http
  selector:
    app: backend-staff-timetable
