kubernetes/frontend-staff-timetable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-staff-timetable
  namespace: "${NAMESPACE}"
  labels:
    app: frontend-staff-timetable
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: frontend-staff-timetable
